--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.3.3.min.js" crossorigin="anonymous"></script>
 
         <!-- favicon -->
-        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+        <link rel="shortcut icon" type="image/png" href="{% static 'algobuilder/img/favicon.ico' %}"/>
 
         {% block style %}
         {% endblock style %}
