--- a/pricedata/templates/pricedata/test.html
+++ b/pricedata/templates/pricedata/test.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{ test_text|safe }}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 bg-light sidebar-sticky">
+            {{ test_text|safe }}
+        </div>
+        <div class="col-md-10 bg-dark">
+            {{ test_text|safe }}
+        </div>
+    </div>
+</div>
 {% endblock content %}
