--- a/templates/base.html
+++ b/templates/base.html
@@ -8,19 +8,20 @@
         {% load static %}
 
         <!-- Load external stylesheets -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
 
         <!-- Locally installed stylesheets -->
-        <link rel="stylesheet" href="{% static 'tempusdominus/css/bootstrap-datetimepicker.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'tempusdominus/css/bootstrap-datetimepicker.min.css' %}" >
 
         <!-- Load site wide stylesheets -->
-        <script src="{% static "algobuilder/css/algobuilder.css" %}"></script>
+        <link rel="stylesheet" href="{% static "algobuilder/css/algobuilder.css" %}"/>
 
         <!-- Need some JS here, these don't work work when installed at bottom with other JS -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.3.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-2.3.3.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.3.3.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
         <!-- favicon -->
         <link rel="shortcut icon" type="image/png" href="{% static 'algobuilder/img/favicon.ico' %}"/>
@@ -30,7 +31,20 @@
     </head>
     <body>
         <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-          <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">AlgoBuilder</a>
+            <a class="navbar-brand col-md-2 mr-0" href="#">AlgoBuilder</a>
+            <!-- Site Menu -->
+            <div class="col-md-10">
+                <div class="btn-group">
+                    <button class="btn btn-dark btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Price Data
+                    </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/pricedata/metrics/">Metrics</a>
+                        <a class="dropdown-item" href="/pricedata/quality">Quality</a>
+                        <a class="dropdown-item" href="/pricedata/candles">Candles</a>
+                    </div>
+                </div>
+            </div>
         </nav>
         {% block content %}
         {% endblock content %}
@@ -40,7 +54,6 @@
         </div>
 
         <!-- Load external JS. -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
         <script src="https://kit.fontawesome.com/d38ab2c7be.js" crossorigin="anonymous"></script>
 
