--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,17 @@
                         <a class="dropdown-item" href="/pricedata/candles">Candles</a>
                     </div>
                 </div>
+                <div class="btn-group">
+                    <button class="btn btn-dark btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/admin/auth/">Authentication</a>
+                        <a class="dropdown-item" href="/admin/background_task">Tasks</a>
+                        <a class="dropdown-item" href="/admin/plugin">Plugins</a>
+                        <a class="dropdown-item" href="/admin/pricedata">Price Data</a>
+                    </div>
+                </div>
             </div>
         </nav>
         {% block content %}
