--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                     </button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="/admin/auth/">Authentication</a>
-                        <a class="dropdown-item" href="/admin/background_task">Tasks</a>
+                        <a class="dropdown-item" href="/admin/django_celery_beat/periodictask/">Tasks</a>
                         <a class="dropdown-item" href="/admin/plugin">Plugins</a>
                         <a class="dropdown-item" href="/admin/pricedata">Price Data</a>
                     </div>
