--- a/pricedata/templates/pricedata/index.html
+++ b/pricedata/templates/pricedata/index.html
@@ -1,46 +1,51 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <nav class="col-md-2 bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'pricedata:metrics' %}">
-                   Pricedata Metrics
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'pricedata:quality' %}">
-                   Pricedata Quality Dashboard
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'pricedata:candles' %}">
-                   OHLC Price Candles for Symbol
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <main class="col-md-10">
-            <h2 class="h2 row">Price Data</h2>
-            <div class="row">
-                The views in this application are designed to enable you to assess the quality of the price data retrieved from your datasources. Some of these views will retrieve and analyse extremely large volumes of data and can take a while to run.
-            </div>
+{% block statusbar %}
+    {% include "pricedata/statusbar.html" %}
+{% endblock statusbar %}
+
+{% block sidebar %}
+<form method="post">
+    {% csrf_token %}
+    <ul class="list-group">
+        <li class="list-group-item">
+            <a class="nav-link active" href="{% url 'pricedata:metrics' %}">Pricedata Metrics</a>
+        </li>
+        <li class="list-group-item">
+            <a class="nav-link active" href="{% url 'pricedata:quality' %}">Pricedata Quality Dashboard</a>
+        </li>
+        <li class="list-group-item">
+            <a class="nav-link active" href="{% url 'pricedata:candles' %}">OHLC Price Candles for Symbol</a>
+        </li>
+        <!-- Don't show the button if the batch is running -->
+        {% if batch_in_progress == False %}
+            <li class="list-group-item">
+                <input class="btn btn-primary" type="submit" value="Run Batch">
+            </li>
+        {% endif %}
+    </ul>
+</form>
+{% endblock sidebar %}
+
+{% block main %}
+<div class="card">
+    <div class="card-body">
+        <h2 class="card-title">Price Data</h2>
+        <h3 class="card-subtitle mb-2 text-muted">Data Quality Metrics and Dashboards</h3>
+        <div class="card-text">
+            <p>The views in this application are for assessing the quality of the price data retrieved from your datasources.<p>
             <ul>
                 <li class="text">
-                    <a class="" href="{% url 'pricedata:metrics' %}">Pricedata Metrics</a> provides first and last retrieved dates for all active symbols along with the minimum, maximum and count of candles retrieved for each aggregated period.
+                    The Pricedata Metrics page provides first and last retrieved dates for all active symbols along with the minimum, maximum and count of candles retrieved for each aggregated period.
                 </li>
                 <li class="text">
-                    <a class="" href="{% url 'pricedata:quality' %}">Pricedata Quality Dashboard</a> provides a heatmap chart showing the number of candles available for each aggregation period. Date ranges can be selected on the chart to enable you to drill down into more granular aggregations of the price data and identify any unexpected gaps.
+                    The Pricedata Quality Dashboard provides a heatmap showing the number of candles available for each aggregation period. Date ranges can be selected on the chart to enable you to drill down into more granular aggregations of the price data and identify any unexpected gaps.
                 </li>
                 <li>
-                    <a class="" href="{% url 'pricedata:candles' %}">OHLC Price Candles for Symbol</a> shows the price candles for the selected symbol for the selected date range.
+                    The OHLC Price Candles for Symbol page shows the price candles for the selected symbol for the selected date range.
                 </li>
             </ul>
-        </main>
+        </div>
     </div>
 </div>
-{% endblock content %}
+{% endblock main %}
