--- a/pricedata/templates/pricedata/candles.html
+++ b/pricedata/templates/pricedata/candles.html
@@ -35,6 +35,18 @@
             </div>
           </li>
           <li class="list-group-item">
+            <div class="form-group">
+                <div class="form-label">{{ form.bid_ask.label }}</div>
+                <div class="flex-fill">{{ form.bid_ask }}</div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="form-group">
+                <div class="form-label">{{ form.chart_type.label }}</div>
+                <div class="flex-fill">{{ form.chart_type }}</div>
+            </div>
+          </li>
+          <li class="list-group-item">
             <input class="btn btn-primary" type="submit" value="Submit">
           </li>
         </ul>
@@ -45,7 +57,7 @@
     <div class="card">
         <div class="card-body">
             <h2 class="card-title">OHLC Prices for - {{ symbol }}</h2>
-            <h3 class="card-subtitle mb-2 text-muted">Candles show open, high, low and close prices for selected symbol across date range.</h3>
+            <h3 class="card-subtitle mb-2 text-muted">Show open, high, low and close prices with volume for {{ symbol }} across date range.</h3>
             <div class="card-text">
                 <div id="chart"></div>
                 {% if chart %}
