--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -64,16 +64,20 @@
           {% endif %}
         {% endblock messages %}
         <!-- Content -->
-        <div id="content" class="{% block coltype %}colM{% endblock %}">
-          {% block pretitle %}{% endblock %}
-          {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
-          {% block content_subtitle %}{% if subtitle %}<h2>{{ subtitle }}</h2>{% endif %}{% endblock %}
-          {% block content %}
-            {% block object-tools %}{% endblock %}
-            {{ content }}
-          {% endblock %}
-          {% block sidebar %}{% endblock %}
-          <br class="clear">
+        <div id="content" class="class {% block coltype %}colM{% endblock %}">
+            {% block pretitle %}{% endblock %}
+            <div class="card-body">
+                <h2 class="card-title">{% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}</h2>
+                <h3 class="card-subtitle mb-2 text-muted">{% block content_subtitle %}{% if subtitle %}<h2 class="card-subtitle mb-2 text-muted">{{ subtitle }}</h2>{% endif %}{% endblock %}</h3>
+                <div class="card-text">
+                    {% block content %}
+                        {% block object-tools %}{% endblock %}
+                        {{ content }}
+                    {% endblock %}
+                </div>
+            </div>
+            {% block sidebar %}{% endblock %}
+            <br class="clear">
         </div>
         <!-- END Content -->
         {% block footer %}
