--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -3,6 +3,11 @@
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
 <head>
 <title>{% block title %}{% endblock %}</title>
+
+<!-- Bootstrap CSS and JS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>
+
 <link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "admin/css/base.css" %}{% endblock %}">
 {% if not is_popup and is_nav_sidebar_enabled %}
   <link rel="stylesheet" type="text/css" href="{% static "admin/css/nav_sidebar.css" %}">
@@ -18,16 +23,6 @@
 {% endblock %}
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
 
-<!-- Load external stylesheets -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-
-<!-- Need some JS here, these don't work work when installed at bottom with other JS -->
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-<!-- favicon -->
-<link rel="shortcut icon" type="image/png" href="{% static 'algobuilder/img/favicon.ico' %}"/>
-
 </head>
 {% load i18n %}
 
@@ -35,17 +30,19 @@
   data-admin-utc-offset="{% now "Z" %}">
 
 <!-- Container -->
-<div id="container">
+<div id="container" class="container-fluid">
 
     {% if not is_popup %}
-        <!-- Header. Menubar and breadcrumbs -->
-        {% include "admin/menubar.html" %}
-        {% block nav-global %}{% endblock %}
+
+        <!-- Menubar -->
+        {% include "menubar.html" %}
+        {% block nav-global %}{% endblock %}  <!-- TODO Not sure if this is used by Admin site. Check.-->
+
         {% block breadcrumbs %}
-            <div class="breadcrumb">
-                <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-                {% if title %} &rsaquo; {{ title }}{% endif %}
-            </div>
+        <div class="breadcrumbs">
+        <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
+        {% if title %} &rsaquo; {{ title }}{% endif %}
+        </div>
         {% endblock %}
     {% endif %}
 
@@ -64,26 +61,24 @@
           {% endif %}
         {% endblock messages %}
         <!-- Content -->
-        <div id="content" class="class {% block coltype %}colM{% endblock %}">
-            {% block pretitle %}{% endblock %}
-            <div class="card-body">
-                <h2 class="card-title">{% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}</h2>
-                <h3 class="card-subtitle mb-2 text-muted">{% block content_subtitle %}{% if subtitle %}<h2 class="card-subtitle mb-2 text-muted">{{ subtitle }}</h2>{% endif %}{% endblock %}</h3>
-                <div class="card-text">
-                    {% block content %}
-                        {% block object-tools %}{% endblock %}
-                        {{ content }}
-                    {% endblock %}
-                </div>
-            </div>
-            {% block sidebar %}{% endblock %}
-            <br class="clear">
+        <div id="content" class="{% block coltype %}colM{% endblock %}">
+          {% block pretitle %}{% endblock %}
+          {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+          {% block content_subtitle %}{% if subtitle %}<h2>{{ subtitle }}</h2>{% endif %}{% endblock %}
+          {% block content %}
+            {% block object-tools %}{% endblock %}
+            {{ content }}
+          {% endblock %}
+          {% block sidebar %}{% endblock %}
+          <br class="clear">
         </div>
         <!-- END Content -->
         {% block footer %}
-            <div id="footer" class="row">
+            <hr>
+            <div class="row">
                 <div class="col-sm-12 text-center small">(c)2021 AlgoBuilder</div>
-            </div>{% endblock %}
+            </div>
+        {% endblock %}
       </div>
     </div>
 </div>
