--- a/templates/base.html
+++ b/templates/base.html
@@ -8,20 +8,23 @@
         {% load static %}
 
         <!-- Load external stylesheets -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-
-        <!-- Locally installed stylesheets -->
-        <link rel="stylesheet" href="{% static 'tempusdominus/css/bootstrap-datetimepicker.min.css' %}" >
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
         <!-- Load site wide stylesheets -->
         <link rel="stylesheet" href="{% static "algobuilder/css/algobuilder.css" %}"/>
 
-        <!-- Need some JS here, these don't work work when installed at bottom with other JS -->
-        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <!-- Load external JS. -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.3.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-2.3.3.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.3.3.min.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+        <!-- Load site wide JS -->
+        <script src="{% static "algobuilder/js/algobuilder.js" %}" async></script>
+
+        {% block javascript %}
+        {% endblock javascript %}
+
 
         <!-- favicon -->
         <link rel="shortcut icon" type="image/png" href="{% static 'algobuilder/img/favicon.ico' %}"/>
@@ -52,18 +55,5 @@
         <div class="row">
             <div class="col-sm-12 text-center small">(c)2021 AlgoBuilder</div>
         </div>
-
-        <!-- Load external JS. -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
-        <script src="https://kit.fontawesome.com/d38ab2c7be.js" crossorigin="anonymous"></script>
-
-        <!-- Locally installed JS -->
-        <script src="{% static 'tempusdominus/js/bootstrap-datetimepicker.min.js' %}"></script>
-
-        <!-- Any app specific js -->
-        <script src="{% static "algobuilder/js/algobuilder.js" %}"></script>
-
-        {% block javascript %}
-        {% endblock javascript %}
     </body>
 </html>
