--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -1,30 +1,64 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-    <a class="navbar-brand col-md-2 mr-0" href="#">AlgoBuilder</a>
-    <!-- Site Menu -->
-    <div class="col-md-10">
-        <div class="btn-group">
-            <button class="btn btn-dark btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Price Data
-            </button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="/pricedata/">Run Batch</a>
-                <a class="dropdown-item" href="/pricedata/metrics/">Metrics</a>
-                <a class="dropdown-item" href="/pricedata/quality">Quality</a>
-                <a class="dropdown-item" href="/pricedata/candles">Candles</a>
-            </div>
+{% load i18n static %}
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">AlgoBuilder</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button"
+                       data-bs-toggle="dropdown">
+                        PriceData
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                        <li><a class="dropdown-item" href="/pricedata/">Run Batch</a></li>
+                        <li><a class="dropdown-item" href="/pricedata/metrics/">Metrics</a></li>
+                        <li><a class="dropdown-item" href="/pricedata/quality">Quality</a></li>
+                        <li><a class="dropdown-item" href="/pricedata/candles">Candles</a></li>
+                    </ul>
+                </li>
+            </ul>
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                            Admin
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="/admin/auth/">Authentication</a></li>
+                            <li><a class="dropdown-item" href="/admin/django_celery_beat/periodictask/">Tasks</a></li>
+                            <li><a class="dropdown-item" href="/admin/plugin">Plugins</a></li>
+                            <li><a class="dropdown-item" href="/admin/pricedata">Price Data</a></li>
+                            {% block usertools %}
+                                {% if has_permission %}
+                                    {% block userlinks %}
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        {% if user.is_active and user.is_staff %}
+                                            {% url 'django-admindocs-docroot' as docsroot %}
+                                            {% if docsroot %}
+                                                <li><a class="dropdown-item"
+                                                       href="{{ docsroot }}">{% translate 'Documentation' %}</a></li>
+                                            {% endif %}
+                                        {% endif %}
+                                        {% if user.has_usable_password %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'admin:password_change' %}">{% translate 'Change password' %}</a>
+                                            </li>
+                                        {% endif %}
+                                        <li><a class="dropdown-item"
+                                               href="{% url 'admin:logout' %}">
+                                            {% translate 'Log out ' %}'{% firstof user.get_short_name user.get_username %}'</a>
+                                        </li>
+                                    {% endblock userlinks %}
+                                {% endif %}
+                            {% endblock usertools %}
+                        </ul>
+                    </li>
+                </ul>
+            {% endif %}
         </div>
-        {% if user.is_authenticated %}
-            <div class="btn-group">
-                <button class="btn btn-dark btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Admin
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/admin/auth/">Authentication</a>
-                    <a class="dropdown-item" href="/admin/django_celery_beat/periodictask/">Tasks</a>
-                    <a class="dropdown-item" href="/admin/plugin">Plugins</a>
-                    <a class="dropdown-item" href="/admin/pricedata">Price Data</a>
-                </div>
-            </div>
-        {% endif %}
     </div>
 </nav>
+
+
